k8s/cicd/nexus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: cicd
spec:
  selector:
    app: nexus
  ports:
    - name: http
      port: 8081
      targetPort: 8081
    - name: docker-registry
      port: 8082
      targetPort: 8082
  type: ClusterIP
